# calendar_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: run.py
app/api/endpoints/: __init__.py  calendar.py
app/bot/: main.py  runner.py
app/core/: config.py  server.py
app/utils/: daily.py  google.py
